feat: login first version, REST, controller, Swagger, usecase
